--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -19,39 +19,42 @@
 
     background-size: cover;
   }
-  
-  section:nth-child(2) {
-    z-index: 1;
+}
 
-    ul {
+section {
+  z-index: 1;
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+
+    li {
+      // padding: 2rem;
+
       display: flex;
-      flex-direction: column;
-      gap: .25rem;
+      align-items: center;
+      justify-content: space-between;
 
-      li {
-        // padding: 2rem;
+      background-color: var(--color-grey);
+
+      button {
+        height: 6rem;
+        border: none;  
+        padding: 0.5rem 1rem;
+        
+        background-color: var(--color-blood);
 
         display: flex;
-        align-items: center;
         justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
 
-        background-color: var(--color-grey);
+        box-shadow: none;
+        font-size: var(--h6);
+        font-weight: bold;
 
-        button {
-          height: 6rem;
-          border: none;  
-          padding: 0.5rem 1rem;
-          
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          gap: 1rem;
-
-          box-shadow: none;
-          font-size: var(--h6);
-          font-weight: bold;
-
-          transition: calc(var(--speed-slow) * 3);
+        transition: calc(var(--speed-slow) * 3);
 
           &.delButton {
             background-color: var(--color-dark);
@@ -67,13 +70,30 @@
             padding-left: 2rem;
             flex-grow: 1;
             color: var(--color-dark);
+            opacity: .15;
             text-align: left;
 
             &:hover {
               background-color: var(--color-white);
+              opacity: 1;
             }
           }
-          
+
+          &.trackButton {
+            padding: 2rem;
+            color: var(--color-dark);
+            text-align: left;
+            flex-grow: 3;
+
+            &:hover {
+              background-color: var(--color-white);
+            }
+
+            &:active {
+              scale: 1;
+            }
+          }
+
           &:hover {
             border-radius: 0;
             transition: calc(var(--speed-fast) / 2);
@@ -87,7 +107,7 @@
       }
     }
   }
-}
+
 
 .streaming__main {
   width: 100%;
@@ -176,58 +196,6 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
-
-          button {
-            --button-color: rgb(124, 124, 124);
-
-            height: 6rem;
-            border: none;  
-            padding: 0.5rem 1rem;
-            
-            box-shadow: none;
-            color: var(--button-color);
-            font-size: var(--h6);
-            font-weight: bold;
-            
-
-            transition: calc(var(--speed-slow) * 3);
-
-            &.favButton {
-              background-color: var(--color-dark);
-              opacity: .15;
-
-              &:hover {
-                background-color: var(--color-green);
-              }
-            }
-
-            &.trackButton {
-              padding: 2rem;
-              color: var(--color-dark);
-              text-align: left;
-              flex-grow: 3;
-
-              &:hover {
-                background-color: var(--color-white);
-              }
-
-              &:active {
-                scale: 1;
-              }
-            }
-
-            &:hover {
-              border-radius: 0;
-              opacity: 1;
-
-              transition: calc(var(--speed-fast) / 2);
-            }
-
-            &:active, &:focus {
-              border-radius: 0;
-              border: 0;
-            }
-          }
 
           div {
             display: flex;
