--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -21,7 +21,7 @@
   }
 }
 
-section.streaming__list {
+.streaming__list {
   z-index: 1;
 
   ul {
@@ -30,8 +30,6 @@ section.streaming__list {
     gap: .25rem;
 
     li {
-      // padding: 2rem;
-
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -57,7 +55,9 @@ section.streaming__list {
         transition: calc(var(--speed-slow) * 3);
 
           &.delButton {
+            padding-left: 2rem;
             background-color: var(--color-dark);
+            flex-grow: 1;
             opacity: .15;
 
             &:hover {
@@ -108,116 +108,70 @@ section.streaming__list {
     }
   }
 
+.toolbar {
+  padding: 0;
+
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: .25rem;
+
+  color: var(--color-white);
+
+  input {
+    flex-grow: 2;
+    background-color: var(--color-grey);
+    border: 0;
+    padding: 2rem;
+
+    font-weight: bold;
+
+    &:active, &:focus, &:hover {
+      background-color: var(--color-white);
+    }
+
+    &::placeholder {
+      color: grey;
+      font-weight: normal;
+    }
+  }
+
+  ul {
+    padding: 0;
+    margin: 0;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-grow: 1;
+    gap: .25rem;
+
+    color: var(--color-grey);
+    font-weight: bold;
+
+    li {
+      border: none;
+
+      flex-grow: 1;
+      padding: 2rem;
+
+      background-color: var(--color-blood);
+      
+      list-style-type: none; 
+      text-align: center;
+    }
+  }
+}
 
 .streaming__main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: rem;
 
-  section {
-    // background-color: var(--color-grey);
-    padding: 2rem;
-
-    div.toolbar {
-      padding: 0;
-
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: .25rem;
-
-      color: var(--color-white);
-
-      input {
-        flex-grow: 2;
-        background-color: var(--color-grey);
-        border: 0;
-        padding: 2rem;
-
-        font-weight: bold;
-
-        &:active, &:focus, &:hover {
-          background-color: var(--color-white);
-        }
-
-        &::placeholder {
-          color: grey;
-          font-weight: normal;
-        }
-      }
-
-      ul {
-        padding: 0;
-        margin: 0;
-
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-grow: 1;
-        gap: .25rem;
-
-        color: var(--color-grey);
-        font-weight: bold;
-
-        li {
-          border: none;
-
-          flex-grow: 1;
-          padding: 2rem;
-
-          background-color: var(--color-blood);
-          
-          list-style-type: none; 
-          text-align: center;
-        }
-      }
-    }
-
-    &.results { 
-      display: flex;
-      flex-direction: column;
-      gap: .25rem;
-
-      padding: 0;
-
-      h2 {
-        padding: 2rem;
-      }
-
-      ul.resultList {
-        display: flex;
-        flex-direction: column;
-        gap: .25rem;
-
-        li {
-          // padding: 2rem;
-          background-color: var(--color-grey);
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-
-          div {
-            display: flex;
-            align-items: center;
-            flex-direction: row;
-          }
-
-          h5 {
-            margin-left: 2rem;
-          }
-        }
-      }
-    }
-  }
-
-  ul.indent {
-  --indent: 3rem;
-  transform: translateX(var(--indent));
-  width: calc(56vw - calc(var(--indent) * 3));
-
-    li { 
-      list-style-type: disc;
-    }
+  ul.resultList {
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
   }
 }
