--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -1,5 +1,6 @@
+
 .streaming__banner {
-  min-width: 38vw;
+  min-width: 42vw;
   
   display: flex;
   flex-direction: column;
@@ -18,6 +19,62 @@
     left;
 
     background-size: cover;
+  }
+}
+
+.streaming__main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.toolbar {
+  padding: 0;
+
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: .25rem;
+
+  input {
+    border: 0;
+    padding: 2rem;
+
+    flex-grow: 3;
+    background-color: var(--color-grey);
+    
+    font-weight: bold;
+
+    &:active, &:focus, &:hover {
+      background-color: var(--color-white);
+    }
+
+    &::placeholder {
+      color: grey;
+      font-weight: normal;
+    }
+  }
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-grow: 1;
+    gap: .25rem;
+
+    color: var(--color-grey);
+    font-weight: bold;
+
+    li {
+      border: none;
+      padding: 2rem;
+
+      flex-grow: 1;
+
+      background-color: var(--color-blood);
+      text-align: center;
+    }
   }
 }
 
@@ -50,6 +107,10 @@
 
       transition: calc(var(--speed-slow) * 3);
 
+      audio {
+        width: 9rem;
+      }
+
       &:hover {
         background-color: var(--color-white);
         transition: calc(var(--speed-fast) / 2);
@@ -66,8 +127,7 @@
       }
 
       &.button-do {
-        background-color: var(--color-dark);
-        opacity: .15;
+        background-color: rgb(223, 223, 223);
 
         &:hover {
           opacity: 1;
@@ -83,59 +143,4 @@
       }
     }
   }
-}
-
-.toolbar {
-  padding: 0;
-
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: .25rem;
-
-  input {
-    flex-grow: 3;
-    background-color: var(--color-grey);
-    border: 0;
-    padding: 2rem;
-
-    font-weight: bold;
-
-    &:active, &:focus, &:hover {
-      background-color: var(--color-white);
-    }
-
-    &::placeholder {
-      color: grey;
-      font-weight: normal;
-    }
-  }
-
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-grow: 1;
-    gap: .25rem;
-
-    color: var(--color-grey);
-    font-weight: bold;
-
-    li {
-      border: none;
-      padding: 2rem;
-      flex-grow: 1;
-      
-
-      background-color: var(--color-blood);
-      text-align: center;
-    }
-  }
-}
-
-.streaming__main {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
 }
