--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -1,18 +1,14 @@
-
 .streaming__banner {
   min-width: 42vw;
   
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  justify-content: top;
   gap: 1rem;
   
   aside {
     min-height: 13vh;
 
     background: 
-    var(--color-yellow) 
     url('../../public/images/svg/blob-scene-haikei.svg')
     no-repeat 
     top 
@@ -30,10 +26,7 @@
 }
 
 .toolbar {
-  padding: 0;
-
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   gap: .25rem;
 
@@ -59,7 +52,6 @@
   ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     flex-grow: 1;
     gap: .25rem;
 
@@ -67,7 +59,6 @@
     font-weight: bold;
 
     li {
-      border: none;
       padding: 2rem;
 
       flex-grow: 1;
@@ -78,7 +69,7 @@
   }
 }
 
-.resultList {
+.streaming__results {
   display: flex;
   flex-direction: column;
   gap: .25rem;
