Green favourite highlight CSS issue fixed.

--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -121,9 +121,10 @@
 
       transition: calc(var(--speed-slow) * 3);
 
-      .fav-green {
+      &.fav-green {
         background-color: var(--color-green);
-}
+      }
+
       audio {
         width: 9rem;
       }
